# gprinterClient

./: CMakeLists.txt  readme.md
gCode/: GCodeParser.cpp  GCodeParser.h
gCodeTests/: CE3_body-small.gcode  CE3_chemcam-small.gcode  CE3_legs-left.gcode  CE3_legs-right.gcode  CE3_lower-robotic-arm.gcode  CE3_mahli-apxs-small.gcode  CE3_upper-robotic-arm.gcode  CE3_wheel-small.gcode
src/: main.cpp
src/gCode/: GCodeParser.cpp  GCodeParser.h
src/ui/mainwindow/: mainwindow.h  mainwindow.ui
src/utils/: helpers.h
ui/databaseConnectionDialog/: databaseconnectiondialog.cpp  databaseconnectiondialog.h  databaseconnectiondialog.ui
ui/mainwindow/: mainwindow.cpp  mainwindow.h
